--- a/fr/snippets.lang
+++ b/fr/snippets.lang
@@ -118,7 +118,7 @@ Invitez vos amis à découvrir en avant-première les futures fonctionnalités d
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Vous utilisez Firefox sur plusieurs ordinateurs&nbsp;? Il vous est maintenant possible de synchroniser vos modules complémentaires sur toutes vos machines. <a href="%">Découvrez comment activer Sync</a>.
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
