--- a/kk/firefoxtesting.lang
+++ b/kk/firefoxtesting.lang
@@ -2,15 +2,15 @@
 
 
 ;Download Firefox Beta for Android - Free
-Download Firefox Beta for Android - Free
+Android үшін Firefox Beta-ны жүктеп алыңыз - Тегін
 
 
 ;Download Firefox Beta for Desktop - Free
-Download Firefox Beta for Desktop - Free
+Firefox Beta-ны компьютер үшін жүктеп алыңыз - Тегін
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
+Firefox-тың келесі нұсқаларын жүктеп алыңыз да сынап алыңыз. Aurora немесе Beta нұсқалармен соңғы жаңалықтарды байқап көріңіз.
 
 
 ;Firefox Beta
@@ -18,42 +18,40 @@ Firefox Beta
 
 
 ;Firefox Beta for:
-Firefox Beta for:
+Firefox Beta үшін:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+Мобильдік Firefox Beta
 
 
 ;Download Beta and be part of the next version of Firefox.
-Download Beta and be part of the next version of Firefox.
+Beta-ны жүктеп алыңыз да Firefox-тың келесі нұсқадағы жұмысына қатысыңыз.
 
 
 ;1. Test Features
-1. Test Features
+1. Жаңалықтарды сынап көріңіз
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Try out the latest performance, customization and security enhancements almost ready for prime time.
+Өнімділікті, икемділікті және қауіпсіздікті арттыратын және әлеуметке дайын соңғы жаңалықтарды сынап алыңыз.
 
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+2. Арттырыңыз және қайратыңыз
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-File bugs to help us put the final tweaks on performance and functionality in a stable environment.
+Бізге тұрақты нұсқада өнімділікті және атқарымдылықты арттыру үшін қателер туралы хабарламаларды жазыңыз.
 
 
 ;3. Do Your Part
-3. Do Your Part
+3. Үлес қосыңыз
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
+Firefox-тың келесі нұсқасына және оны күнде қолданатын 450 миллион адамдарға әсер етіңіз.
 
 
 ;Supported devices
-Supported devices
-
-
+Қолдаулы жабдықтар
