--- a/kk/snippets.lang
+++ b/kk/snippets.lang
@@ -82,66 +82,49 @@ Android үшін Firefox планшеттерде жұмыс істеуге ик
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Firefox Beta жүктеп алыңыз</a>, кері байланысты жеткізіп тұрыңыз және келесі Firefox-ты біздің 450 миллион пайдаланушы үшін одан да тамаша жасауға көмектесіңіз.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Жаңалықтарды сынап алып, оларды арттырыңыз және келесі нұсқаны бір кезде жақсырақ жасауға көмектесіңіз. <a href="%"> Firefox Beta бүгін жүктеп алыңыз!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Firefox-ты ұнатасыз ба? Біздің келесі нұсқаны тіпті жақсырақ жасауға қалайсыз ба? <a href="%">Firefox Beta бүгін жүктеп алыңыз</a> және сіздің кері байланысты бүгін жеткізіңіз!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+Сіз соңғы Firefox Beta қолдап тұрсыз ба? <a href="%">Оны қазір алыңыз</a> және бізге соңғы мүмкіндіктерді тестілеуге көмектесіңіз.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Соңғы Firefox Beta-да емессіз бе? <a href="%">Оны бүгін алыңыз</a> және біз келесі нұсқада не туралы жұмыс жасайтын біліңіз.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Кері байланысты жеткізуге қалайсыз ба? <a href="%">Оны қалай жасауға болады біліңіз</a>және Firefox-тың келесі нұсқасын одан да тамаша жасауға көмектесіңіз.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Firefox Beta пайдаланушылары: бізге келесі нұсқада соңғы  баптауларын кірістіру үшін ұмытпаңыз <a href="%">кері байланысты жеткізіп тұрыңыз</a>.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Firefox-тың келесі нұсқасын одан да тамаша жасауға көмектесіңіз. <a href="%">Көмекші болып</a> Firefox Beta-мен өз достарыңызбен бөлісіңіз.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Firefox-тың болашақ мұмкіндіктерін алдын-ала қарауға достарыңызды шақырыңыз. <a href="%">Көмекші болып</a> Firefox Aurora-мен бүгін бөлісіңіз.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Firefox-ты бірнеше компьютерлерде қолданасыз ба? Енді сіз олар арасында кеңейтуларды синхрондай аласыз. <a href="%">Sync-ты қалай қолдануға болатынын табыңыз.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Жылдам, тез әрі өткір. <a %s> Android үшін Firefox қазір ғана үлкен жаңартуды алды</a>. Бізге бұл туралы әлемге таратуға көмектесіңіз.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-
-
-;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-
-
-;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-
-
-;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-
-
-;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-
+Firefox-та сіздің келесі тапсырманы орындауға жаңа мүмкіндітер бар! <a href="%">Көбірек білу үшін бейнені көріңіз.</a>
 
