--- a/ff/whatsnew.lang
+++ b/ff/whatsnew.lang
@@ -1,3 +1,6 @@
+# This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
+
+
 ;Hooray! Your Firefox is up to date.
 Haayoo! Firefox maa hesɗitii.
 
@@ -56,3 +59,41 @@ Yantu e Mozilla
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
 Roboo Android oo tummbitaa ko e golle cosaaɗe ɗe <a href="%s">Google wostondiri</a> tee huutoraa ko e sarɗiiji cifaaɗi e <a href="%s">Jamirol Beeɗgol Creative Commons 3.0</a>.
+
+
+;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+
+
+;Now get the mobile browser that’s got your back
+Now get the mobile browser that’s got your back
+
+
+;Firefox Features
+Firefox Features
+
+
+# This is the tab title
+;Welcome to Firefox
+Welcome to Firefox
+
+
+;Firefox Help
+Firefox Help
+
+
+# This is the alternate text for the Android image for blind people
+;Firefox for Android artwork
+Firefox for Android artwork
+
+
+# Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
+;Fast. Smart. Safe.
+Fast. Smart. Safe.
+
+
+# This message is displayed as a fallback if we don't have a promotional video ready
+;Get the mobile browser that’s got your back.
+Get the mobile browser that’s got your back.
+
+
