--- a/fr/whatsnew.lang
+++ b/fr/whatsnew.lang
@@ -1,4 +1,4 @@
-# This is for the Whatsnew page: http://www-dev.allizom.org/firefox/13.0/whatsnew/
+# This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
 
 
 ;Hooray! Your Firefox is up to date.
@@ -61,8 +61,6 @@ Aidez Mozilla
 Le robot Android est inspiré d'une œuvre créée et <a href="%s">partagée par Google</a> et est utilisé selon les conditions décrites par sa licence <a href="%s">Creative Commons 3.0</a>.
 
 
-
-
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
 <a href="%s">Adoptez Firefox pour Android</a> et gardez la puissance du web à portée de main. Il est rapide, sûr et malin&nbsp;!
 
@@ -75,6 +73,7 @@ Adoptez maintenant le navigateur mobile qui assure vos arrières.
 Fonctionnalités de Firefox
 
 
+# This is the tab title
 ;Welcome to Firefox
 Bienvenue dans Firefox
 
@@ -83,13 +82,18 @@ Bienvenue dans Firefox
 Assistance pour Firefox
 
 
-;Get the mobile browser that’s got your back.
-Adoptez le navigateur mobile qui assure vos arrières.
-
-
+# This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
 Illustration Firefox pour Android
 
 
+# Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
 Rapide. Sûr. Malin.
+
+
+# This message is displayed as a fallback if we don't have a promotional video ready
+;Get the mobile browser that’s got your back.
+Adoptez le navigateur mobile qui assure vos arrières.
+
+
