--- a/he/whatsnew.lang
+++ b/he/whatsnew.lang
@@ -1,4 +1,4 @@
-# This is for the Whatsnew page: http://www-dev.allizom.org/firefox/13.0/whatsnew/
+# This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
 
 
 ;Hooray! Your Firefox is up to date.
@@ -26,7 +26,7 @@
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-ראו כיצד התכונות החדשות של Firefox מסייעות לכם לגלוש מהר יותר וביעילות. 
+ראו כיצד התכונות החדשות של Firefox מסייעות לכם לגלוש מהר יותר וביעילות.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
@@ -59,3 +59,41 @@
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
 הרובוט של Android נגזר  מעבודה שנוצרה <a href="%s">ושותפה על־ידי Google</a> ונעשה בה שימוש בהתאם להנחיות שמתוארות ב<a href="%s">רישיון Creative Commons ייחוס 3.0</a>.
+
+
+;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+
+
+;Now get the mobile browser that’s got your back
+Now get the mobile browser that’s got your back
+
+
+;Firefox Features
+Firefox Features
+
+
+# This is the tab title
+;Welcome to Firefox
+Welcome to Firefox
+
+
+;Firefox Help
+Firefox Help
+
+
+# This is the alternate text for the Android image for blind people
+;Firefox for Android artwork
+Firefox for Android artwork
+
+
+# Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
+;Fast. Smart. Safe.
+Fast. Smart. Safe.
+
+
+# This message is displayed as a fallback if we don't have a promotional video ready
+;Get the mobile browser that’s got your back.
+Get the mobile browser that’s got your back.
+
+
