--- a/kn/whatsnew.lang
+++ b/kn/whatsnew.lang
@@ -1,4 +1,4 @@
-# This is for the Whatsnew page: http://www-dev.allizom.org/firefox/13.0/whatsnew/
+# This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
 
 
 ;Hooray! Your Firefox is up to date.
@@ -59,5 +59,41 @@
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
 ಆಂಡ್ರಾಯ್ಡ್ ರೊಬೋಟ್ ಅನ್ನು <a href="%s">Googleನಿಂದ ನಿರ್ಮಿಸಲಾದ ಮತ್ತು ಹಂಚಿಕೊಳ್ಳಲಾದ</a> ಕೆಲಸದಿಂದ <a href="%s">Creative Commons 3.0 Attribution License</a>ನಲ್ಲಿ ವಿವರಿಸಲಾದ ನಿಯಮಗಳ ಅನ್ವಯ ಪುನರ್ ನಿರ್ಮಾಣಗೊಳಿಸಲಾಗಿದೆ .
+
+
+;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+
+
+;Now get the mobile browser that’s got your back
+Now get the mobile browser that’s got your back
+
+
+;Firefox Features
+Firefox Features
+
+
+# This is the tab title
+;Welcome to Firefox
+Welcome to Firefox
+
+
+;Firefox Help
+Firefox Help
+
+
+# This is the alternate text for the Android image for blind people
+;Firefox for Android artwork
+Firefox for Android artwork
+
+
+# Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
+;Fast. Smart. Safe.
+Fast. Smart. Safe.
+
+
+# This message is displayed as a fallback if we don't have a promotional video ready
+;Get the mobile browser that’s got your back.
+Get the mobile browser that’s got your back.
 
 
