--- a/pa-IN/whatsnew.lang
+++ b/pa-IN/whatsnew.lang
@@ -1,4 +1,4 @@
-# This is for the Whatsnew page: http://www-dev.allizom.org/firefox/13.0/whatsnew/
+# This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
 
 
 ;Hooray! Your Firefox is up to date.
@@ -19,7 +19,6 @@
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
 ਸੁਰੱਖਿਆ ਕਾਰਨਾਂ ਕਰਕੇ, ਅਸੀਂ <a href="{url}">ਸਭ ਤੋਂ ਨਵੇਂ ਅਤੇ ਸਭ ਤੋਂ ਵਧੀਆ ਵਰਜਨ</a> ਨੂੰ ਡਾਊਨਲੋਡ ਕਰਨ ਦੀ ਸਿਫਾਰਸ਼ ਕਰਦੇ
-ਹਾਂ।
 
 
 ;Get to your next task<br/>faster than ever
@@ -60,5 +59,41 @@
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
 ਐਡਰਾਇਡ ਰੋਬੋਟ ਨੂੰ <a href="%s">ਗੂਗਲ ਵਲੋਂ ਸਾਂਝੇ ਕੀਤੇ</a> ਅਤੇ ਬਣਾਏ ਕੰਮ ਤੋਂ ਮੁੜ-ਤਿਆਰ ਕੀਤਾ ਗਿਆ ਸੀ ਅਤੇ ਇਸ ਨੂੰ <a href="%s">Creative Commons 3.0 Attribution License</a> ਦੀਆਂ ਸ਼ਰਤਾਂ ਅਧੀਨ ਵਰਤਿਆ ਜਾਂਦਾ ਹੈ।
+
+
+;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+
+
+;Now get the mobile browser that’s got your back
+Now get the mobile browser that’s got your back
+
+
+;Firefox Features
+Firefox Features
+
+
+# This is the tab title
+;Welcome to Firefox
+Welcome to Firefox
+
+
+;Firefox Help
+Firefox Help
+
+
+# This is the alternate text for the Android image for blind people
+;Firefox for Android artwork
+Firefox for Android artwork
+
+
+# Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
+;Fast. Smart. Safe.
+Fast. Smart. Safe.
+
+
+# This message is displayed as a fallback if we don't have a promotional video ready
+;Get the mobile browser that’s got your back.
+Get the mobile browser that’s got your back.
 
 
