--- a/pt-BR/whatsnew.lang
+++ b/pt-BR/whatsnew.lang
@@ -1,47 +1,99 @@
-# This is for the Whatsnew page: http://www-dev.allizom.org/firefox/13.0/whatsnew/
+# This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
+
 
 ;Hooray! Your Firefox is up to date.
 Uau! O Firefox está atualizado.
 
+
 ;Your Firefox is out of date.
 Seu Firefox está desatualizado.
+
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
 Por razões de segurança, nós recomendamos que você atualize para a <a href="{url}">melhor e mais recente versão</a>.
 
+
 ;You’re running an unknown version of Firefox.
 Você está usando uma versão desconhecida do Firefox.
+
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
 Por razões de segurança, nós recomendamos que você baixe a <a href="{url}">melhor e mais recente versão</a>.
 
+
 ;Get to your next task<br/>faster than ever
 Chegue até sua próxima tarefa mais rápido que nunca
+
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
 Veja como os novos recursos do Firefox ajudam a navegar com mais velocidade e eficiência.
 
+
 ;Learn more about <a href="{url}">the New Tab feature »</a>
 Saiba mais sobre a <a href="{url}">página Nova Aba »</a>
+
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
 Saiba mais sobre nossa <a href="{url}">página inicial renovada »</a>
 
+
 ;Keep in touch
 Mantenha contato
+
 
 ;Keep it moving
 Mantenha-se em movimento
 
+
 ;Get Firefox » <b>for Android</b>
 Baixe o Firefox » <b>para Android</b>
+
 
 ;Keep it going
 Mantenha o entusiasmo
 
+
 ;Join Mozilla
 Una-se à Mozilla
 
+
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
 O robô Android foi reproduzido a partir de um trabalho criado e <a href="%s">compartilhado pelo Google</a> e usado de acordo com os termos descritos na <a href="%s">Licença Creative Commons 3.0 Atribuição</a>.
+
+
+;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+
+
+;Now get the mobile browser that’s got your back
+Now get the mobile browser that’s got your back
+
+
+;Firefox Features
+Firefox Features
+
+
+# This is the tab title
+;Welcome to Firefox
+Welcome to Firefox
+
+
+;Firefox Help
+Firefox Help
+
+
+# This is the alternate text for the Android image for blind people
+;Firefox for Android artwork
+Firefox for Android artwork
+
+
+# Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
+;Fast. Smart. Safe.
+Fast. Smart. Safe.
+
+
+# This message is displayed as a fallback if we don't have a promotional video ready
+;Get the mobile browser that’s got your back.
+Get the mobile browser that’s got your back.
+
 
