--- a/sl/whatsnew.lang
+++ b/sl/whatsnew.lang
@@ -1,4 +1,4 @@
-# This is for the Whatsnew page: http://www-dev.allizom.org/firefox/13.0/whatsnew/
+# This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
 
 
 ;Hooray! Your Firefox is up to date.
@@ -26,7 +26,7 @@ Lotite se svojega dela<br/>hitreje kot kdajkoli prej
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-Oglejte si novosti Firefoxa, ki vam bodo pomagale brskati hitreje in bolj učinkovito. 
+Oglejte si novosti Firefoxa, ki vam bodo pomagale brskati hitreje in bolj učinkovito.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
@@ -59,5 +59,41 @@ Pridružite se
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
 Android Robot je reprodukcija dela, ki ga je ustvaril in <a href="%s">dal na razpolago Google</a>. Uporabljen je v skladu z določili <a href="%s">Creative Commons 3.0 Attribution License</a>.
+
+
+;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+
+
+;Now get the mobile browser that’s got your back
+Now get the mobile browser that’s got your back
+
+
+;Firefox Features
+Firefox Features
+
+
+# This is the tab title
+;Welcome to Firefox
+Welcome to Firefox
+
+
+;Firefox Help
+Firefox Help
+
+
+# This is the alternate text for the Android image for blind people
+;Firefox for Android artwork
+Firefox for Android artwork
+
+
+# Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
+;Fast. Smart. Safe.
+Fast. Smart. Safe.
+
+
+# This message is displayed as a fallback if we don't have a promotional video ready
+;Get the mobile browser that’s got your back.
+Get the mobile browser that’s got your back.
 
 
